# tomatillo

./: .gitignore  Cargo.toml  README.md
.config/: .cspell.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/lib/: Cargo.toml
crates/lib/src/: countdown.rs  lib.rs  timer.rs
crates/lib/src/countdown/: channel.rs  mod.rs  timer.rs  watcher.rs
crates/lib/src/view/: mod.rs
crates/lib/src/view/font/: ansi_shadow.rs  electronic.rs  mod.rs  templar.rs
