[workspace]
resolver = "3"
members = ["crates/cli", "crates/lib"]

[workspace.package]
version = "0.1.0"
authors = [
    "Pierre Fouilloux",
    "Hibiscus Collective <collective@hibiscusgames.com>",
]
edition = "2024"
rust-version = "1.85"
description = "A tiny, lightweight and simple Pomodoro timer."
documentation = "https://docs.rs/tomatillo"
readme = "README.md"
homepage = "https://github.com/HibiscusCollective/tomatillo"
repository = "https://www.github.com/HibiscusCollective/tomatillo"
license = "AGPL-3.0-or-later"
keywords = ["pomodoro", "timer", "productivity"]
publish = true

[workspace.lints.clippy]
style = "deny"
complexity = "deny"
perf = "deny"
restriction = "warn"
pedantic = "warn"

[workspace.dependencies]
libtomatillo = { version = "*", path = "./crates/lib" }
# External dependencies
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
