[package]
name = "libtomatillo"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
thiserror = "2.0.12"
anyhow = "1.0.97"
indoc = "2.0.6"

[dev-dependencies]
rstest = "0.25.0"
tokio = { workspace = true, features = ["test-util"] }
